# VictorGerin.github.io

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  index.scss  update.ps1
docs/: index.html  (+15 more)
front_page/: Cargo.toml  index.scss  update.ps1
front_page/.VSCodeCounter/2023-09-15_14-32-18/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
front_page/.VSCodeCounter/2023-09-18_20-19-50/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
front_page/.VSCodeCounter/2023-09-20_17-07-49/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
front_page/.VSCodeCounter/2023-09-21_08-41-19/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
front_page/.VSCodeCounter/2023-09-21_08-42-23/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
front_page/src/: app.rs  example_request.rs  main.rs
front_page/src/asteroid/: game.rs  mod.rs
front_page/src/asteroid/data/: asteroid.json  bullet.json  ship.json  teste.json
front_page/src/asteroid/drawable/: drawable_collection.rs  mod.rs  object.rs
front_page/src/asteroid/entity/: mod.rs
front_page/src/asteroid/shader/: fragment_shader.glsl  mod.rs  vertex_shader.glsl
front_page/src/asteroid/shader/Object/: fragment_shader.glsl  vertex_shader.glsl
front_page/src/asteroid/shader/Teste/: fragment.glsl  vertex.glsl
rust_server_docker/: Cargo.toml  Dockerfile  fly.toml
rust_server_docker/src/: main.rs
(+17 files in other folders)
