[package]
name = "rust_server_docker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
axum = "0.6.20"
postgres = "0.17.2"
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["cors"] }
